# ai-practice

project1/: .env  TODO.md  main.py  pyproject.toml
project1-2/: .env  main.py  pyproject.toml
project1-2/.cache/41/: cache.db
project1-2/.trae/rules/: git-commit-message.md
project1-2/api/: fastapi.py
project1-2/config/: settings.py
project1/agents/: agent.py
project1/config/: __init__.py  setting.py
project1/tool/: amap_weather_tool.py
project3-1/: .env  part1.ipynb  part2.ipynb  part2.py
project3-1/data/: 人工智能伦理——算法治理、社会影响与未来挑战.txt  气候变化——科学共识、全球影响与应对策略.txt  量子计算——原理、进展与未来展望.txt
project3-1/output/: ocr_result.txt
